--- a/package.json
+++ b/package.json
@@ -10,16 +10,32 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^6.0.3",
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^12.2.11",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
+    "ag-grid-angular": "^26.1.0",
+    "ag-grid-community": "^26.1.0",
+    "angular2-materialize": "^15.1.10",
+    "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
+    "materialize-angular": "^0.7.10",
+    "materialize-css": "^1.0.0",
+    "ngx-spinner": "^12.0.0",
+    "ngx-toastr": "^14.1.4",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
+    "xlsx": "^0.17.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
