--- a/package.json
+++ b/package.json
@@ -11,41 +11,46 @@
   "private": true,
   "dependencies": {
     "@angular-material-components/datetime-picker": "^6.0.3",
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.11",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
+    "@angular/animations": "^12.2.13",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.13",
+    "@angular/compiler": "^12.2.13",
+    "@angular/core": "^12.2.13",
+    "@angular/forms": "^12.2.13",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^12.2.11",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "^12.2.13",
+    "@angular/platform-browser-dynamic": "^12.2.13",
+    "@angular/router": "^12.2.13",
     "ag-grid-angular": "^26.1.0",
     "ag-grid-community": "^26.1.0",
+    "angular-datatables": "^12.0.1",
     "angular2-materialize": "^15.1.10",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "materialize-angular": "^0.7.10",
     "materialize-css": "^1.0.0",
     "ngx-spinner": "^12.0.0",
-    "ngx-toastr": "^14.1.4",
+    "ngx-toastr": "^14.2.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
-    "xlsx": "^0.17.3",
+    "xlsx": "^0.17.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.8",
-    "@angular/cli": "~12.2.8",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "^12.2.13",
+    "@angular/cli": "^12.2.13",
+    "@angular/compiler-cli": "^12.2.13",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/jquery": "^3.5.8",
+    "@types/node": "^12.20.37",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
